# aurachat

dashboard/: Cargo.toml  README.md  a.py
dashboard/migrations/: 001_create_accounts_table.sql
dashboard/src/: main.rs
dashboard/src/application/: mod.rs
dashboard/src/application/dtos/: account_dto.rs  message_dto.rs  mod.rs
dashboard/src/application/services/: account_service.rs  mod.rs
dashboard/src/domain/: mod.rs
dashboard/src/domain/entities/: account.rs
dashboard/src/domain/repositories/: account_repository.rs  mod.rs
dashboard/src/infrastructure/: mod.rs
dashboard/src/infrastructure/messaging/: mod.rs  rabbitmq.rs
dashboard/src/infrastructure/persistence/: mod.rs
dashboard/src/infrastructure/persistence/models/: account.rs
dashboard/src/infrastructure/persistence/repositories/: account_repository_impl.rs  mod.rs
dashboard/src/presentation/routes/: account_routes.rs  messages_routes.rs  mod.rs
telegram-api/: a.py  pyproject.toml
telegram-api/src/: cons.py  run.py  test.py
telegram-api/src/telegram_api/config/: rabbitmq.cfg
telegram-api/src/telegram_api/domain/models/: message.py
telegram-api/src/telegram_api/services/: telegram_bot.py
