[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
lapin = "3.7.0"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1.16", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
anyhow = "1.0"
dotenv = "0.15.0"
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
schemars = { version = "0.8.0" , features = ["preserve_order"] }
okapi = "0.7.0"
rand = "0.9.2"
